[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/enemigos/explosion.png" type="Texture" id=1]
[ext_resource path="res://Assets/enemigos/enemigo2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Enemy/shooting.gd" type="Script" id=3]
[ext_resource path="res://MyAssets/naves_enemigos/nave_boss.png" type="Texture" id=4]
[ext_resource path="res://MyAssets/Sonidos/laser-3.mp3" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 21.0002
height = 51.9998

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("exp:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("exp:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("collider:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/Sprite:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/Sprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "destroy"
tracks/0/type = "value"
tracks/0/path = NodePath("exp:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("exp:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("collider:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/Sprite:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "normal"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 10 ) ]
}

[node name="Boss" type="Area2D" groups=["boss"]]
script = ExtResource( 3 )

[node name="Sprites" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Sprites"]
texture = ExtResource( 2 )
flip_h = true
flip_v = true
hframes = 6

[node name="bullets_out" type="Position2D" parent="Sprites/Sprite"]
position = Vector2( 32, -19 )

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2( 128, -12 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="exp" type="Sprite" parent="."]
visible = false
position = Vector2( 11, 18 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 1 )
hframes = 10

[node name="animator" type="AnimationPlayer" parent="."]
autoplay = "normal"
anims/RESET = SubResource( 3 )
anims/destroy = SubResource( 2 )
anims/normal = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.007
autostart = true

[node name="shoot_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -13.293

[node name="Position2D" type="Position2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 31.6623, -18.9342 )
enabled = true
cast_to = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 16, -11 )
scale = Vector2( 0.87, 0.92525 )
texture = ExtResource( 4 )

[connection signal="area_entered" from="." to="." method="_on_enemy_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_enemy_body_entered"]
[connection signal="animation_finished" from="animator" to="." method="_on_animator_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
